@@ -11,6 +11,8 @@ Version 1.0
   * Smalltalk
   * Darcs patches
   * Tcl
+  * Matlab
+  * Matlab sessions
 
 - Support doc comments in the PHP lexer.
 
